k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx   #Telling k8s we want to create an ingress controller based on nginx project$
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1     #How the actual copy of nginx behaves, a rewrite when we redirect request with specific path (delete /api for ex)
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
               name: client-cluster-ip-service
               port: 
                 number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
               name: server-cluster-ip-service
               port:
                 number: 5000
